fix: shift hero points to upper right corner

--- a/static/styles/twodsix.css
+++ b/static/styles/twodsix.css
@@ -379,7 +379,7 @@ img.character-info-mask {
 }
 
 .bgi-gender input {
-  width: 7em;
+  width: 10ch;
   border: none;
 }
 
